tests/snapshots/compiler_error_fixtures/invalid_effect_row_e304.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/invalid_effect_row_e304.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Effect expressions can contain only one row variable tail.

  examples/compiler_errors/invalid_effect_row_e304.flx:10:30
   |
10 | fn confused<e, f>() with IO |e |f {
   |                              ^

Hint:
  Use a single tail variable, for example `with |e`.

Note:
  while parsing function `confused`
== stdout ==
<not executed>
